# markdownlint-codeblock-json

./: .pre-commit-hooks.yaml  README.md  setup.cfg
lint_json/: main.py
