# setup.cfg
[metadata]
name = markdownlint-codeblock-json
description = Lint JSON codeblocks within a Markdown file
version = 0.1.0
author = Pierre Mourlanne
author_email = pmourlanne@gmail.com
license = MIT
url = https://example.com

[options]
packages = find:

[options.entry_points]
console_scripts =
    lint-codeblock-json = lint_json.main:main
